[gd_scene load_steps=45 format=3 uid="uid://mfo10a4jt8se"]

[ext_resource type="Script" path="res://Old/boss_enemy_walking.gd" id="1_l0aty"]
[ext_resource type="Script" path="res://Old/Damageable_boss1.gd" id="2_r6hmv"]
[ext_resource type="Texture2D" uid="uid://dm5cqlnq6vl8d" path="res://Old/enemies_mini_boss-Sheet.png" id="3_7kek1"]
[ext_resource type="Script" path="res://Character/CharacterStateMachine.gd" id="4_d5go6"]
[ext_resource type="Script" path="res://Old/Walk_boss.gd" id="5_g72l1"]
[ext_resource type="Script" path="res://Old/Hit_boss.gd" id="6_cim8e"]
[ext_resource type="Script" path="res://Old/Attack_boss.gd" id="7_b5g27"]
[ext_resource type="Script" path="res://Old/Skill_boss.gd" id="8_yn102"]
[ext_resource type="Script" path="res://Old/Label.gd" id="9_lf4jm"]
[ext_resource type="Script" path="res://Old/EnemyHP_boss.gd" id="10_hvskf"]
[ext_resource type="AudioStream" uid="uid://bu4xn1h8vwgjh" path="res://bgm/rockstonesfx.mp3" id="11_53fgc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_frtoe"]
size = Vector2(25, 51)

[sub_resource type="Animation" id="Animation_fwhmc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_w3s11"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7kek1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterStateMachine/Attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"changewalk"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"inactivate"
}, {
"args": [],
"method": &"activate"
}, {
"args": [],
"method": &"inactivate"
}]
}

[sub_resource type="Animation" id="Animation_3o4bj"]
resource_name = "blink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7kek1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 4.7, 4.8, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 41, 40, 4]
}

[sub_resource type="Animation" id="Animation_lpvwm"]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7kek1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_xlv7o"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7kek1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_uhqx0"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7kek1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_a60hx"]
resource_name = "skill_dash"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7kek1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55, 56, 57, 58, 59]
}

[sub_resource type="Animation" id="Animation_rubw8"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7kek1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4bv1w"]
_data = {
"RESET": SubResource("Animation_fwhmc"),
"attack": SubResource("Animation_w3s11"),
"blink": SubResource("Animation_3o4bj"),
"dead": SubResource("Animation_lpvwm"),
"hit": SubResource("Animation_xlv7o"),
"idle": SubResource("Animation_uhqx0"),
"skill_dash": SubResource("Animation_a60hx"),
"walk": SubResource("Animation_rubw8")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gclnp"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hfmfd"]
animation = &"blink"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_elfk8"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2qr6r"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fj0if"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_43a2s"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_stg0f"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_jd0sp"]
blend_point_0/node = SubResource("AnimationNodeAnimation_fj0if")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_43a2s")
blend_point_1/pos = -1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_stg0f")
blend_point_2/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nnvhh"]
animation = &"skill_dash"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_di8ah"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_83lth"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bg3w4"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_02uao"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q1cbl"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5nrw1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hddic"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j310l"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oi4kx"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t4gkc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pgboa"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5l5e4"]
states/attack/node = SubResource("AnimationNodeAnimation_gclnp")
states/attack/position = Vector2(365, 147)
states/blink/node = SubResource("AnimationNodeAnimation_hfmfd")
states/blink/position = Vector2(653, 138)
states/dead/node = SubResource("AnimationNodeAnimation_elfk8")
states/dead/position = Vector2(752, 67)
states/hit/node = SubResource("AnimationNodeAnimation_2qr6r")
states/hit/position = Vector2(628, 59)
states/move/node = SubResource("AnimationNodeBlendSpace1D_jd0sp")
states/move/position = Vector2(393, 44)
states/skill_dash/node = SubResource("AnimationNodeAnimation_nnvhh")
states/skill_dash/position = Vector2(518, 142)
transitions = ["hit", "dead", SubResource("AnimationNodeStateMachineTransition_di8ah"), "dead", "End", SubResource("AnimationNodeStateMachineTransition_83lth"), "Start", "move", SubResource("AnimationNodeStateMachineTransition_bg3w4"), "move", "attack", SubResource("AnimationNodeStateMachineTransition_02uao"), "attack", "move", SubResource("AnimationNodeStateMachineTransition_q1cbl"), "move", "skill_dash", SubResource("AnimationNodeStateMachineTransition_5nrw1"), "skill_dash", "move", SubResource("AnimationNodeStateMachineTransition_hddic"), "move", "hit", SubResource("AnimationNodeStateMachineTransition_j310l"), "hit", "move", SubResource("AnimationNodeStateMachineTransition_oi4kx"), "move", "blink", SubResource("AnimationNodeStateMachineTransition_t4gkc"), "blink", "move", SubResource("AnimationNodeStateMachineTransition_pgboa")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfsky"]
size = Vector2(95.4014, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuj14"]
size = Vector2(67, 70)

[node name="Enemy_walking_boss" type="CharacterBody2D" node_paths=PackedStringArray("hit_state", "walk_state", "damageable", "attack_state")]
script = ExtResource("1_l0aty")
hit_state = NodePath("CharacterStateMachine/Hit")
walk_state = NodePath("CharacterStateMachine/Walk")
damageable = NodePath("Damageable")
attack_state = NodePath("CharacterStateMachine/Attack")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -10.5)
shape = SubResource("RectangleShape2D_frtoe")

[node name="ledgecheckright" type="RayCast2D" parent="."]
position = Vector2(24, -12)
target_position = Vector2(0, 14)

[node name="ledgecheckleft" type="RayCast2D" parent="."]
position = Vector2(-23, -12)
target_position = Vector2(0, 14)

[node name="Damageable" type="Node" parent="."]
script = ExtResource("2_r6hmv")
health = null
dead1 = null

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = ExtResource("3_7kek1")
hframes = 10
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4bv1w")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
deterministic = false
libraries = {
"": SubResource("AnimationLibrary_4bv1w")
}
tree_root = SubResource("AnimationNodeStateMachine_5l5e4")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = -0.00201613

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("4_d5go6")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Walk")

[node name="Walk" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("attack_state", "skill_state")]
script = ExtResource("5_g72l1")
attack_state = NodePath("../Attack")
skill_state = NodePath("../Skill")

[node name="Timer" type="Timer" parent="CharacterStateMachine/Walk"]
one_shot = true

[node name="Hit" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable", "return_state")]
script = ExtResource("6_cim8e")
damageable = NodePath("../../Damageable")
return_state = NodePath("../Walk")

[node name="Timer" type="Timer" parent="CharacterStateMachine/Hit"]
wait_time = 0.4
one_shot = true

[node name="Timer2" type="Timer" parent="CharacterStateMachine/Hit"]
wait_time = 0.8
one_shot = true

[node name="Attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("walk_state", "attack_state")]
script = ExtResource("7_b5g27")
walk_state = NodePath("../Walk")
attack_state = NodePath(".")

[node name="Skill" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("walk_state", "attack_state")]
script = ExtResource("8_yn102")
walk_state = NodePath("../Walk")
attack_state = NodePath("../Attack")

[node name="Enemy_Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_Attack"]
position = Vector2(2.70069, -14.5)
shape = SubResource("RectangleShape2D_jfsky")

[node name="EnemyTimer" type="Timer" parent="."]

[node name="Check" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Check"]
position = Vector2(2.5, -19)
shape = SubResource("RectangleShape2D_vuj14")

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("9_lf4jm")
state_machine = NodePath("../CharacterStateMachine")

[node name="EnemyHP_boss" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_hvskf")

[node name="ProgressBar" type="ProgressBar" parent="EnemyHP_boss"]
clip_contents = true
layout_mode = 0
offset_left = -16.0
offset_top = -69.0
offset_right = 52.0
offset_bottom = -58.0
scale = Vector2(0.5, 0.5)
max_value = 20.0
show_percentage = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_53fgc")
volume_db = -50.0
bus = &"SFX"

[connection signal="animation_finished" from="AnimationPlayer" to="CharacterStateMachine/Attack" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="CharacterStateMachine/Hit/Timer" to="CharacterStateMachine/Hit" method="_on_timer_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Hit/Timer2" to="CharacterStateMachine/Hit" method="_on_timer_2_timeout"]
[connection signal="body_entered" from="Enemy_Attack" to="." method="_on_enemy_attack_body_entered"]
[connection signal="body_exited" from="Enemy_Attack" to="." method="_on_enemy_attack_body_exited"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="body_entered" from="Check" to="CharacterStateMachine/Walk" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Check" to="CharacterStateMachine/Walk" method="_on_area_2d_body_exited"]
